--- a/level-based-segments/app/Dockerfile
+++ b/level-based-segments/app/Dockerfile
@@ -12,6 +12,6 @@ COPY ./assets /app/assets
 COPY ./requirements.txt /app/requirements.txt
 COPY ./.streamlit /app/.streamlit
 
-RUN pip3 install -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
 
 ENTRYPOINT ["streamlit", "run", "src/index.py", "--server.port=8501", "--server.address=0.0.0.0"]
