--- a/diamonds/app/Dockerfile
+++ b/diamonds/app/Dockerfile
@@ -10,6 +10,6 @@ COPY ./src /app/src
 COPY ./resources /app/resources
 COPY ./requirements.txt /app/requirements.txt
 
-RUN pip3 install -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
 
 ENTRYPOINT ["streamlit", "run", "src/index.py", "--server.port=8501", "--server.address=0.0.0.0"]
