--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -9,8 +9,8 @@ name = "javascript"
 [[analyzers]]
 name = "java"
 
-  [analyzers.meta]
-  runtime_version = "17"
+[analyzers.meta]
+runtime_version = "17"
 
 [[analyzers]]
 name = "shell"
@@ -18,17 +18,17 @@ name = "shell"
 [[analyzers]]
 name = "python"
 
-  [analyzers.meta]
-  runtime_version = "3.x.x"
+[analyzers.meta]
+runtime_version = "3.x.x"
 
 [[analyzers]]
 name = "docker"
 
-  [analyzers.meta]
-  dockerfile_paths = [
-    "diamonds/app/Dockerfile",
-    "level-based-segments/app/Dockerfile"
-  ]
+[analyzers.meta]
+dockerfile_paths = [
+  "diamonds/app/Dockerfile",
+  "level-based-segments/app/Dockerfile",
+]
 
 [[transformers]]
 name = "black"
