--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = newsletter
 	url = git@github.com:h-okay/newsletter-signup.git
 	branch = main
+[submodule "calculator/hakanokay.dev"]
+	path = calculator/hakanokay.dev
+	url = git@github.com:h-okay/hakanokay.dev.git
